--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -93,3 +93,10 @@
     width: 80vw;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .footer {
+    margin-top: 7rem;
+    margin-bottom: 0;
+  }
+}
