--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -44,3 +44,9 @@
     margin: 0 2rem;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .intro__background {
+    width: 90vw;
+  }
+}
