--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -56,3 +56,9 @@
     width: 2rem;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .header {
+    max-width: 80vw;
+  }
+}
