--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,15 @@
 @use 'layout' as *;
 @use 'components' as *;
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   color: $gray;
   background: $background;
